# spacetraders-sdk-v2

./: .gitignore  AStar.py  README.md  api.py  credits_analyze.py  db_test.py  default.env  enums.py  extractions_analyze.py  feba_ratelimit.py  leaderboard.py  markets.py  miner.py  my_generator.py  objects.py  pyproject.toml  queries.py  queries.sql  requirements.txt  st_database.py  survey_analyze.py
scripts/: updater.py
scripts/weirdstats/: jgranges.py
src/spacetraders_sdk/: a_star.py  api.py  constants.py  enums.py  helper.py  peewee_test.py  ratelimit.py  sdk.py  space_traders_api.py  space_traders_db.py  space_traders_db_schema.py  space_traders_enums.py  space_traders_logger.py  space_traders_objects.py  space_traders_sdk.py  sqlal.py  st_db.py
