[build-system]
requires = ["hatchling","requests","psycopg2-binary","python-dotenv"]
build-backend = "hatchling.build"

[project]
name = "spacetraders_sdk"
version = "2.0.3"
authors = [
	{ name="Felix Baumkötter", email="feba@feba66.de" },
]
description = "A python sdk for the SpaceTradersAPI game"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/feba66/spacetraders-sdk-v2"
"Bug Tracker" = "https://github.com/feba66/spacetraders-sdk-v2/issues"

[tool.autopep8]
max_line_length = 120
# in-place = true
# recursive = true
# aggressive = 3